safer-api/safer-api.h

int hslua_compare(lua_State *L, int index1, int index2, int op);
int hslua_getglobal(lua_State *L, const char *name);
int hslua_gettable(lua_State *L, int index);
int hslua_settable(lua_State *L, int index);